feat: add order crud

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'material_list' %}">Material</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'order_list' %}">Orders</a>
+                        </li>
                     </ul>
 
                     <ul class="navbar-nav list-inline">
